# AnimateSDK

./: .gitignore  CMakeLists.txt  Doxyfile
animate-sdk/: CMakeLists.txt
animate-sdk/include/: AnimateCore.h  AnimateDOM.h  AnimateGenerator.h  AnimateModule.h  AnimatePublisher.h  AnimateService.h  AnimateWriter.h
animate-sdk/source/animate/: AnimateSDK.cpp
animate-sdk/source/animate/app/: AppDeclarations.h  AppNamespace.h  ApplicationFCMPublicIDs.h
animate-sdk/source/animate/app/DOM/: DOMDeclarations.h  ICamera.h  IFLADocument.h  IFilterable.h  IFrame.h  IFrame1.h  ILayer.h  ILayer1.h  ILayer2.h  ILibraryItem.h  ITimeline.h  ITimeline1.h  ITween.h
animate-sdk/source/animate/core/: IFCMCallback.h  IFCMCalloc.h  IFCMClassFactory.h  IFCMDictionary.h  IFCMList.h  IFCMNoAggregationUnknown.h  IFCMNotificationClient.h  IFCMNotificationService.h  IFCMPair.h  IFCMPluginDictionary.h  IFCMStringUtils.h  IFCMUnknown.h
animate-sdk/source/animate/generator/: GraphicGenerator.cpp  GraphicGenerator.h  MovieClipGenerator.cpp  MovieClipGenerator.h  SymbolGenerator.cpp  SymbolGenerator.h  TextFieldGenerator.cpp  TextFieldGenerator.h
animate-sdk/source/animate/module/: FeaturesTypes.hpp  GenericDocument.hpp  GenericFeatureMatrix.cpp  GenericFeatureMatrix.h  GenericFeatureMatrix.hpp  GenericPublisher.hpp  GenericPublisherConfig.hpp  Types.hpp
animate-sdk/source/animate/publisher/: ResourcePublisher.cpp  ResourcePublisher.h  ResourceReference.h
animate-sdk/source/animate/writer/: IDisplayObjectWriter.h  IGraphicWriter.h  IMovieclipWriter.h  ITextFieldWriter.h  IWriter.h
(+152 files in other folders)
